force-app/main/default/objects/Account/fields/Account_Code_Formula__c.field-meta.xml
<CustomField>
    <fullName>Account_Code_Formula__c</fullName>
    <description>This field is used for integration with Pronto</description>
    <formula>IF(RecordType.DeveloperName = &#39;Cash_Account_RT&#39;,  Parent.Pronto_Account_Code__c , Pronto_Account_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Code</label>
    <type>Text</type>
</CustomField>