force-app/main/default/objects/Account/fields/Account_Created_in_Pronto__c.field-meta.xml
<CustomField>
    <fullName>Account_Created_in_Pronto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Created in Pronto</label>
    <type>Checkbox</type>
</CustomField>