force-app/main/default/objects/Account/fields/Account_Name_Account_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Account_Code__c</fullName>
    <description>This field is used in Create PO flow for helping Supplier Selection with the same name</description>
    <formula>Name + &#39; - &#39;+  Pronto_Account_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name - Account Code</label>
    <type>Text</type>
</CustomField>