force-app/main/default/objects/Account/fields/Account_Name_Lower__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Lower__c</fullName>
    <formula>LOWER( Name )</formula>
    <label>Account Name Lower</label>
    <type>Text</type>
</CustomField>