force-app/main/default/objects/Account/fields/ACN__c.field-meta.xml
<CustomField>
    <fullName>ACN__c</fullName>
    <description>Account ACN</description>
    <externalId>true</externalId>
    <label>ACN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>