force-app/main/default/objects/Account/fields/Address_of_relative_not_co_habitating__c.field-meta.xml
<CustomField>
    <fullName>Address_of_relative_not_co_habitating__c</fullName>
    <label>Address of relative (not co-habitating)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>