force-app/main/default/objects/Account/fields/Authorisation_Number__c.field-meta.xml
<CustomField>
    <fullName>Authorisation_Number__c</fullName>
    <label>Authorisation Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>