force-app/main/default/objects/Account/fields/Business_Premises__c.field-meta.xml
<CustomField>
    <fullName>Business_Premises__c</fullName>
    <label>Business Premises</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finance to Validate</fullName>
            </value>
            <value>
                <fullName>Owned</fullName>
            </value>
            <value>
                <fullName>Leased</fullName>
            </value>
            <value>
                <fullName>Mortgaged</fullName>
            </value>
            <value>
                <fullName>Cash_Account_RT</fullName>
                <isActive>false</isActive>
                <label>Cash_Account_RT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>