force-app/main/default/objects/Account/fields/Confirm_action__c.field-meta.xml
<CustomField>
    <fullName>Confirm_action__c</fullName>
    <label>Save to update Pronto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>