force-app/main/default/objects/Account/fields/Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit__c</fullName>
    <description>When updating picklist values, please make sure that the update is reflected in &quot;Credit Limit $ value&quot; field so the right amount will be sent to the Customer by email</description>
    <label>Required Credit Limit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>C.O.D</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>Credit limit A (1,250,000)</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>Credit limit B (750,000)</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Credit limit C (300,000)</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>Credit limit D (100,000)</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>Credit limit E (50,000)</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>Credit limit F (20,000)</label>
            </value>
            <value>
                <fullName>G</fullName>
                <label>Credit limit G (10,000)</label>
            </value>
            <value>
                <fullName>H</fullName>
                <label>Credit limit H (5,000)</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>Credit limit I (2,500)</label>
            </value>
            <value>
                <fullName>J</fullName>
                <label>Credit limit J (1,500)</label>
            </value>
            <value>
                <fullName>K</fullName>
                <label>Credit limit K (25,000)</label>
            </value>
            <value>
                <fullName>L</fullName>
                <label>Credit limit L (500,000)</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>Credit limit M (150,000)</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>Credit limit N (75,000)</label>
            </value>
            <value>
                <fullName>O</fullName>
                <label>Credit limit O (250K)</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Credit limit P (30K)</label>
            </value>
            <value>
                <fullName>Q</fullName>
                <label>Credit limit Q (200K)</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>Credit limit R (40K)</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>Credit limit S (1,000,000)</label>
            </value>
            <value>
                <fullName>T</fullName>
                <label>Credit limit T (15,000)</label>
            </value>
            <value>
                <fullName>U</fullName>
                <label>Credit limit U (35,000)</label>
            </value>
            <value>
                <fullName>V</fullName>
                <label>Credit limit V (120,000)</label>
            </value>
            <value>
                <fullName>W</fullName>
                <label>Credit limit W (65,000)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>