force-app/main/default/objects/Account/fields/Details_of_Lessor_Agent_or_Morgage__c.field-meta.xml
<CustomField>
    <fullName>Details_of_Lessor_Agent_or_Morgage__c</fullName>
    <label>Details of Lessor / Agent or Morgage</label>
    <type>TextArea</type>
</CustomField>