force-app/main/default/objects/Account/fields/Dont_Send_Welcome_Email__c.field-meta.xml
<CustomField>
    <fullName>Dont_Send_Welcome_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this only if you do not want welcome emails to go to accounts</inlineHelpText>
    <label>Dont Send Welcome Email</label>
    <type>Checkbox</type>
</CustomField>