force-app/main/default/objects/Account/fields/Is_Partnership_Name_Registered__c.field-meta.xml
<CustomField>
    <fullName>Is_Partnership_Name_Registered__c</fullName>
    <label>Is Partnership Name Registered?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>