force-app/main/default/objects/Account/fields/Name_of_Close_Relative_For_Reference__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Close_Relative_For_Reference__c</fullName>
    <label>Name of Close Relative For Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>