force-app/main/default/objects/Account/fields/Nature_of_business__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_business__c</fullName>
    <label>Nature of business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Defense</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>