force-app/main/default/objects/Account/fields/Nominal_Capital__c.field-meta.xml
<CustomField>
    <fullName>Nominal_Capital__c</fullName>
    <label>Nominal Capital</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>