force-app/main/default/objects/Account/fields/Number_of_Years_in_Partnership__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Years_in_Partnership__c</fullName>
    <label>Number of Years in Partnership</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>