force-app/main/default/objects/Account/fields/Paid_Up_Capital__c.field-meta.xml
<CustomField>
    <fullName>Paid_Up_Capital__c</fullName>
    <label>Paid Up Capital</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>