force-app/main/default/objects/Account/fields/Postal_Name__c.field-meta.xml
<CustomField>
    <fullName>Postal_Name__c</fullName>
    <description>Supplier postal name</description>
    <label>Postal Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>