force-app/main/default/objects/Account/fields/Pronto_Account_Code__c.field-meta.xml
<CustomField>
    <fullName>Pronto_Account_Code__c</fullName>
    <externalId>true</externalId>
    <label>Account Code</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>