force-app/main/default/objects/Account/fields/Pronto_Account_Owner_Code__c.field-meta.xml
<CustomField>
    <fullName>Pronto_Account_Owner_Code__c</fullName>
    <label>Pronto Account Owner Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>