force-app/main/default/objects/Account/fields/Registered_Business_City_Suburb__c.field-meta.xml
<CustomField>
    <fullName>Registered_Business_City_Suburb__c</fullName>
    <label>Registered Business City/Suburb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>