force-app/main/default/objects/Account/fields/Registered_Business_Country__c.field-meta.xml
<CustomField>
    <fullName>Registered_Business_Country__c</fullName>
    <label>Registered Business Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>