force-app/main/default/objects/Account/fields/Registered_Business_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Registered_Business_Postcode__c</fullName>
    <label>Registered Business Postcode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>