force-app/main/default/objects/Account/fields/Registered_Business_State__c.field-meta.xml
<CustomField>
    <fullName>Registered_Business_State__c</fullName>
    <label>Registered Business State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>