force-app/main/default/objects/Account/fields/Registered_Business_Street__c.field-meta.xml
<CustomField>
    <fullName>Registered_Business_Street__c</fullName>
    <label>Registered Business Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>