force-app/main/default/objects/Account/fields/Search_ABN_link__c.field-meta.xml
<CustomField>
    <fullName>Search_ABN_link__c</fullName>
    <formula>IF(  ISBLANK(ABN__c),HYPERLINK(&quot;https://abr.business.gov.au/Search/ResultsActive?SearchText=&quot;&amp;SUBSTITUTE( Name , &#39; &#39;, &#39;%20&#39;), &quot;Click Here&quot;), &#39;&#39; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This link redirects to the government website to search for the company ABN number when ABN field is not populated</inlineHelpText>
    <label>Search ABN link</label>
    <type>Text</type>
</CustomField>