force-app/main/default/objects/Account/fields/Site_City_Suburb__c.field-meta.xml
<CustomField>
    <fullName>Site_City_Suburb__c</fullName>
    <label>Site City/Suburb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>