force-app/main/default/objects/Account/fields/Site_Country__c.field-meta.xml
<CustomField>
    <fullName>Site_Country__c</fullName>
    <label>Site Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>