force-app/main/default/objects/Account/fields/Site_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Site_Postcode__c</fullName>
    <label>Site Postcode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>