force-app/main/default/objects/Account/fields/Site_State__c.field-meta.xml
<CustomField>
    <fullName>Site_State__c</fullName>
    <label>Site State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>