force-app/main/default/objects/Account/fields/Spouse_Defacto_Partner__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Defacto_Partner__c</fullName>
    <label>Spouse / Defacto Partner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>