force-app/main/default/objects/Account/fields/Sync_With_Pronto__c.field-meta.xml
<CustomField>
    <fullName>Sync_With_Pronto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Updating Pronto</label>
    <type>Checkbox</type>
</CustomField>