force-app/main/default/objects/Account/recordTypes/Cash_Account_RT.recordType-meta.xml
<RecordType>
    <fullName>Cash_Account_RT</fullName>
    <active>true</active>
    <label>Cash Account</label>
</RecordType>