force-app/main/default/objects/Account/recordTypes/Company_Account_RT.recordType-meta.xml
<RecordType>
    <fullName>Company_Account_RT</fullName>
    <active>true</active>
    <label>Company</label>
</RecordType>