force-app/main/default/objects/Account/recordTypes/Partnership_Account_RT.recordType-meta.xml
<RecordType>
    <fullName>Partnership_Account_RT</fullName>
    <active>true</active>
    <label>Partnership</label>
</RecordType>