force-app/main/default/objects/Account/recordTypes/Sole_Trader_Account_RT.recordType-meta.xml
<RecordType>
    <fullName>Sole_Trader_Account_RT</fullName>
    <active>true</active>
    <label>Sole Trader</label>
</RecordType>