force-app/main/default/objects/Account/recordTypes/Supplier_Account_RT.recordType-meta.xml
<RecordType>
    <fullName>Supplier_Account_RT</fullName>
    <active>true</active>
    <label>Supplier</label>
</RecordType>