force-app/main/default/objects/Account/validationRules/VR_ACC01_Business_Street_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_ACC01_Business_Street_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(BillingStreet) &amp;&amp; NOT(ISCHANGED(Account_Payable_Contact__c))
&amp;&amp;  RecordType.DeveloperName &lt;&gt; &quot;Supplier_Account_RT&quot; &amp;&amp; RecordType.DeveloperName &lt;&gt;  &quot;Cash_Account_RT&quot;</errorConditionFormula>
    <errorDisplayField>BillingStreet</errorDisplayField>
    <errorMessage>Please fill out the business street number and street name</errorMessage>
</ValidationRule>