force-app/main/default/objects/Account/validationRules/VR_ACC02_Business_City_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_ACC02_Business_City_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(BillingCity) &amp;&amp; NOT(ISCHANGED(Account_Payable_Contact__c))&amp;&amp;
RecordType.DeveloperName &lt;&gt; &quot;Supplier_Account_RT&quot; &amp;&amp; RecordType.DeveloperName &lt;&gt;  &quot;Cash_Account_RT&quot;</errorConditionFormula>
    <errorDisplayField>BillingCity</errorDisplayField>
    <errorMessage>Please fill out the business city</errorMessage>
</ValidationRule>