force-app/main/default/objects/Account/validationRules/VR_ACC03_Business_State_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_ACC03_Business_State_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(BillingState) &amp;&amp; NOT(ISCHANGED(Account_Payable_Contact__c)) &amp;&amp; RecordType.DeveloperName &lt;&gt; &quot;Supplier_Account_RT&quot; &amp;&amp; RecordType.DeveloperName &lt;&gt;  &quot;Cash_Account_RT&quot;</errorConditionFormula>
    <errorDisplayField>BillingState</errorDisplayField>
    <errorMessage>Please fill out the business state</errorMessage>
</ValidationRule>