force-app/main/default/objects/Account/validationRules/VR_ACC04_Business_Postcode_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_ACC04_Business_Postcode_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( BillingPostalCode ) &amp;&amp; NOT(ISCHANGED(Account_Payable_Contact__c)) &amp;&amp; RecordType.DeveloperName &lt;&gt; &quot;Supplier_Account_RT&quot; &amp;&amp; RecordType.DeveloperName &lt;&gt;  &quot;Cash_Account_RT&quot;</errorConditionFormula>
    <errorDisplayField>BillingPostalCode</errorDisplayField>
    <errorMessage>Please fill out the business postcode</errorMessage>
</ValidationRule>