force-app/main/default/objects/Account/validationRules/VR_ACC05_Business_Country_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_ACC05_Business_Country_Mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(ISCHANGED(Account_Payable_Contact__c)) &amp;&amp; ISBLANK( BillingCountry )</errorConditionFormula>
    <errorDisplayField>BillingCountry</errorDisplayField>
    <errorMessage>Please fill out the business country</errorMessage>
</ValidationRule>