force-app/main/default/objects/Account/validationRules/VR_ACC06_Postal_Street_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_ACC06_Postal_Street_Mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(  ShippingStreet  ) &amp;&amp; NOT(ISCHANGED(Account_Payable_Contact__c))</errorConditionFormula>
    <errorDisplayField>ShippingStreet</errorDisplayField>
    <errorMessage>Please fill out the postal street number and street name</errorMessage>
</ValidationRule>