force-app/main/default/objects/Account/validationRules/VR_ACC07_Postal_City_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_ACC07_Postal_City_Mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(  ShippingCity  ) &amp;&amp; NOT(ISCHANGED(Account_Payable_Contact__c))</errorConditionFormula>
    <errorDisplayField>ShippingCity</errorDisplayField>
    <errorMessage>Please fill out the postal city</errorMessage>
</ValidationRule>