force-app/main/default/objects/Account/validationRules/VR_ACC08_Postal_State_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_ACC08_Postal_State_Mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(  ShippingState  ) &amp;&amp; NOT(ISCHANGED(Account_Payable_Contact__c))</errorConditionFormula>
    <errorDisplayField>ShippingState</errorDisplayField>
    <errorMessage>Please fill out the postal state</errorMessage>
</ValidationRule>