force-app/main/default/objects/Account/validationRules/VR_ACC09_Postal_Postcode_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_ACC09_Postal_Postcode_Mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(  ShippingPostalCode  ) &amp;&amp; NOT(ISCHANGED(Account_Payable_Contact__c))</errorConditionFormula>
    <errorDisplayField>ShippingPostalCode</errorDisplayField>
    <errorMessage>Please fill out the postal postcode</errorMessage>
</ValidationRule>