force-app/main/default/objects/Account/validationRules/VR_ACC10_Postal_Country_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_ACC10_Postal_Country_Mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(  ShippingCountry  ) &amp;&amp; NOT(ISCHANGED(Account_Payable_Contact__c))</errorConditionFormula>
    <errorDisplayField>ShippingCountry</errorDisplayField>
    <errorMessage>Please fill out the postal country</errorMessage>
</ValidationRule>