force-app/main/default/objects/Account/validationRules/VR_ACC11_BusinessPremisesDetails.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_ACC11_BusinessPremisesDetails</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Details_of_Lessor_Agent_or_Morgage__c ) &amp;&amp;
(ISPICKVAL(Business_Premises__c, &#39;Leased&#39;) ||  ISPICKVAL(Business_Premises__c, &#39;Mortgaged&#39;))</errorConditionFormula>
    <errorDisplayField>Details_of_Lessor_Agent_or_Morgage__c</errorDisplayField>
    <errorMessage>This field is mandatory when Business Premises is &#39;Leased&#39; or &#39;Mortgaged&#39;</errorMessage>
</ValidationRule>