force-app/main/default/objects/Account/validationRules/VR_ACC12_OtherNatureOfBusiness.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_ACC12_OtherNatureOfBusiness</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Other__c) &amp;&amp;
ISPICKVAL(Industry, &#39;Other&#39;)</errorConditionFormula>
    <errorDisplayField>Other__c</errorDisplayField>
    <errorMessage>This field is mandatory when Nature Of Business value is &#39;Other&#39;</errorMessage>
</ValidationRule>