force-app/main/default/objects/Account/validationRules/VR_ACC13_CannotUpdateAccountName.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_ACC13_CannotUpdateAccountName</fullName>
    <active>false</active>
    <errorConditionFormula>ISCHANGED(Name) &amp;&amp; RecordType.DeveloperName &lt;&gt; &quot;Supplier_Account_RT&quot; &amp;&amp;  Account_Created_in_Pronto__c = TRUE</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Account Name cannot be updated after it has been integrated with Pronto</errorMessage>
</ValidationRule>