force-app/main/default/objects/Account/validationRules/VR_ACC14_ABN_StatusOK.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_ACC14_ABN_StatusOK</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Customer_Status__c , &#39;OK&#39;) &amp;&amp; ISBLANK( ABN__c ) &amp;&amp;  RecordType.DeveloperName &lt;&gt; &#39;Supplier_Account_RT&#39;</errorConditionFormula>
    <errorDisplayField>ABN__c</errorDisplayField>
    <errorMessage>ABN field is required when the Customer Status = OK</errorMessage>
</ValidationRule>