force-app/main/default/objects/Account/validationRules/VR_ACC15_CustomerStatusOK_FinanceOnly.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_ACC15_CustomerStatusOK_FinanceOnly</fullName>
    <active>true</active>
    <errorConditionFormula>(ISNEW() ||ISCHANGED(Customer_Status__c ))  &amp;&amp; ISPICKVAL(Customer_Status__c, &#39;OK&#39;) &amp;&amp;  $Profile.Name &lt;&gt; &#39;Finance&#39; &amp;&amp; RecordType.DeveloperName &lt;&gt; &quot;Supplier_Account_RT&quot;</errorConditionFormula>
    <errorDisplayField>Customer_Status__c</errorDisplayField>
    <errorMessage>Only Finance users can change status to OK</errorMessage>
</ValidationRule>