force-app/main/default/objects/Account/validationRules/VR_ACC17_AccountPayable_StatusOK.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_ACC17_AccountPayable_StatusOK</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Customer_Status__c, &#39;OK&#39;) &amp;&amp;  ISBLANK(Account_Payable_Contact__c) &amp;&amp; RecordType.DeveloperName &lt;&gt; &quot;Supplier_Account_RT&quot;</errorConditionFormula>
    <errorDisplayField>Account_Payable_Contact__c</errorDisplayField>
    <errorMessage>Please create a Contact with &quot;Account Payable Contact&#39; set to true</errorMessage>
</ValidationRule>