force-app/main/default/objects/Account/validationRules/VR_ACC18_AccountCode_Case.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_ACC18_AccountCode_Case</fullName>
    <active>true</active>
    <description>Account Code can not be lower case</description>
    <errorConditionFormula>NOT(CONTAINS(Pronto_Account_Code__c ,UPPER(Pronto_Account_Code__c )))</errorConditionFormula>
    <errorDisplayField>Pronto_Account_Code__c</errorDisplayField>
    <errorMessage>Account Code can not be lower case</errorMessage>
</ValidationRule>