force-app/main/default/objects/Account/listViews/Accounts_without_Payable_Contact_LV.listView-meta.xml
<ListView>
    <fullName>Accounts_without_Payable_Contact_LV</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Payable_Contact__c</field>
        <operation>equals</operation>
    </filters>
    <label>Accounts without Payable Contact</label>
</ListView>