force-app/main/default/objects/Account/listViews/Suppliers_LV.listView-meta.xml
<ListView>
    <fullName>Suppliers_LV</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Supplier_Account_RT</value>
    </filters>
    <label>Suppliers</label>
</ListView>